fix: JsonProperty